pomを修正